--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+
+    <script
+      src="https://kit.fontawesome.com/242b53fc8a.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="mat-typography">
     <app-root></app-root>
