--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>CocibolcaApp</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/png" href="assets/img/volcano.png" />
 
     <script
       src="https://kit.fontawesome.com/242b53fc8a.js"
